<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transperent_black"
    android:gravity="center"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="@dimen/padding_medium"
        app:cardElevation="10dp"
        app:contentPadding="1dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/padding_medium">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <com.land.custom.RobotoTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:text="@string/str_addreview"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_large"
                        app:font="@string/font_roboto_regular" />

                    <RelativeLayout
                        android:layout_width="@dimen/button_small"
                        android:layout_height="@dimen/button_small"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/button_blue">

                        <ImageView
                            android:id="@+id/button_close"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:src="@drawable/ic_close_white" />
                    </RelativeLayout>
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_small"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="@dimen/margin_small"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_medium">


                    <com.land.custom.RobotoTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:text="@string/str_quality"
                        android:textAllCaps="true"
                        android:textColor="@color/blackgray"
                        android:textSize="@dimen/font_medium"
                        app:font="@string/font_roboto_regular" />


                    <android.support.v7.widget.AppCompatRatingBar
                        android:id="@+id/ratingBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/font_small"
                        android:max="5"
                        android:numStars="5"
                        android:stepSize="1"
                        android:theme="@style/RatingBarBlack" />

                    <com.land.custom.RobotoTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:text="@string/str_service"
                        android:textAllCaps="true"
                        android:textColor="@color/blackgray"
                        android:textSize="@dimen/font_medium"
                        app:font="@string/font_roboto_regular" />

                    <android.support.v7.widget.AppCompatRatingBar
                        android:id="@+id/services_ratingBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/font_small"
                        android:max="5"
                        android:numStars="5"
                        android:stepSize="1"
                        android:theme="@style/RatingBarBlack" />

                    <com.land.custom.RobotoTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:text="@string/str_convenience"
                        android:textAllCaps="true"
                        android:textColor="@color/blackgray"
                        android:textSize="@dimen/font_medium"
                        app:font="@string/font_roboto_regular" />

                    <android.support.v7.widget.AppCompatRatingBar
                        android:id="@+id/convenience_ratingBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/font_small"
                        android:max="5"
                        android:numStars="5"
                        android:stepSize="1"
                        android:theme="@style/RatingBarBlack" />

                    <EditText
                        android:id="@+id/editText_message"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:background="@drawable/bg_box_round"
                        android:gravity="top"
                        android:hint="@string/str_addcommnet"
                        android:maxLength="100"
                        android:padding="5dp"
                        android:textColor="@color/blackgray"
                        android:textColorHint="@color/blackgray" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <com.land.custom.RobotoTextView
                            android:id="@+id/button_cancel"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/button_medium"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="@dimen/padding_large"
                            android:layout_marginTop="@dimen/margin_medium"
                            android:layout_marginRight="@dimen/padding_large"
                            android:layout_marginBottom="@dimen/margin_small"
                            android:layout_weight="1"
                            android:background="@drawable/button_blue"
                            android:gravity="center"
                            android:text="@string/str_cancel"
                            android:textColor="@color/white"
                            app:font="@string/font_roboto_regular" />

                        <com.land.custom.RobotoTextView
                            android:id="@+id/button_submit"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/button_medium"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="@dimen/padding_large"
                            android:layout_marginTop="@dimen/margin_medium"
                            android:layout_marginRight="@dimen/padding_large"
                            android:layout_marginBottom="@dimen/margin_small"
                            android:layout_weight="1"
                            android:background="@drawable/button_blue"
                            android:gravity="center"
                            android:text="@string/str_send"
                            android:textColor="@color/white"
                            app:font="@string/font_roboto_regular" />


                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>
    </android.support.v7.widget.CardView>
</LinearLayout>